# numpy-c-api-iteration

./: CMakeLists.txt  README.md  npyiters.c  npyitersmodule.c  pyproject.toml
